--- a/ScreenshotHook.Presentation/Views/MainWindow.xaml
+++ b/ScreenshotHook.Presentation/Views/MainWindow.xaml
@@ -22,7 +22,6 @@
     </Window.DataContext>
 
     <Window.Resources>
-        <SolidColorBrush x:Key="mainColor" Color="#2196F3" />
         <converters:ColorToBrushConverter x:Key="ColorToBrushConverter" />
         <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
         <converters:CountToVisibilityConverter x:Key="CountToVisibilityConverter" />
@@ -73,34 +72,6 @@
             </Style.Resources>
         </Style>
 
-        <Style x:Key="TabItemStyle" TargetType="TabItem">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="TabItem">
-                        <Border x:Name="Border"
-                                Margin="5,0"
-                                BorderBrush="Transparent"
-                                BorderThickness="0,0,0,3">
-                            <ContentPresenter x:Name="ContentSite"
-                                              Margin="10,5"
-                                              ContentSource="Header"
-                                              RecognizesAccessKey="True" />
-                        </Border>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsSelected" Value="True">
-                                <Setter TargetName="Border" Property="BorderBrush" Value="{StaticResource mainColor}" />
-                                <Setter Property="Foreground" Value="{StaticResource mainColor}" />
-                            </Trigger>
-                            <Trigger Property="IsSelected" Value="False">
-                                <Setter Property="Foreground" Value="Gray" />
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-            <Setter Property="FontSize" Value="14" />
-        </Style>
-
         <Style TargetType="Slider">
             <Setter Property="Minimum" Value="0" />
             <Setter Property="Maximum" Value="255" />
@@ -140,10 +111,16 @@
             </tb:TaskbarIcon>
 
             <Grid>
+                <TextBlock HorizontalAlignment="Center"
+                           VerticalAlignment="Center"
+                           FontSize="18"
+                           Foreground="{StaticResource mainColor}"
+                           Text="ScreenHook" />
                 <StackPanel Margin="10"
                             HorizontalAlignment="Right"
                             VerticalAlignment="Top"
                             Orientation="Horizontal">
+
                     <TextBlock VerticalAlignment="Center"
                                Cursor="Hand"
                                FontSize="16"
@@ -176,7 +153,7 @@
                         BorderBrush="{StaticResource mainColor}"
                         BorderThickness="1">
                 <TabControl.Resources>
-                    <Style BasedOn="{StaticResource TabItemStyle}" TargetType="TabItem" />
+                    <Style BasedOn="{StaticResource TabItemStyle0}" TargetType="TabItem" />
                 </TabControl.Resources>
 
                 <TabItem Header="进程选择">
@@ -205,6 +182,7 @@
                                          VerticalAlignment="Center"
                                          VerticalContentAlignment="Center"
                                          FontSize="16"
+                                         Style="{StaticResource TextboxStyle0}"
                                          Text="{Binding FilterText, UpdateSourceTrigger=PropertyChanged}">
                                     <i:Interaction.Behaviors>
                                         <behaviors:TextBoxCaretBehavior />
@@ -222,6 +200,7 @@
 
                             <ScrollViewer Grid.Row="2"
                                           HorizontalScrollBarVisibility="Hidden"
+                                          Style="{StaticResource ScrollViewerStyle}"
                                           VerticalScrollBarVisibility="Auto">
                                 <i:Interaction.Behaviors>
                                     <behaviors:ScrollOnMouseWheelBehavior />
@@ -362,6 +341,7 @@
 
                         <ScrollViewer Padding="10"
                                       HorizontalScrollBarVisibility="Hidden"
+                                      Style="{StaticResource ScrollViewerStyle}"
                                       VerticalScrollBarVisibility="Auto">
                             <Grid>
                                 <Grid.RowDefinitions>
@@ -381,6 +361,7 @@
                                     <TextBox Grid.Column="1"
                                              Height="30"
                                              VerticalContentAlignment="Center"
+                                             Style="{StaticResource TextboxStyle0}"
                                              Text="{Binding Watermark.Text, UpdateSourceTrigger=PropertyChanged}">
                                         <i:Interaction.Behaviors>
                                             <behaviors:TextBoxCaretBehavior />
@@ -449,6 +430,7 @@
                                         <TextBox Grid.Column="3"
                                                  Margin="20,0"
                                                  VerticalAlignment="Center"
+                                                 Style="{StaticResource TextboxStyle0}"
                                                  Text="{Binding Watermark.ColorR, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource ByteRangeConverter}}" />
                                     </Grid>
 
@@ -469,6 +451,7 @@
                                         <TextBox Grid.Column="3"
                                                  Margin="20,0"
                                                  VerticalAlignment="Center"
+                                                 Style="{StaticResource TextboxStyle0}"
                                                  Text="{Binding Watermark.ColorG, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource ByteRangeConverter}}" />
                                     </Grid>
 
@@ -489,6 +472,7 @@
                                         <TextBox Grid.Column="3"
                                                  Margin="20,0"
                                                  VerticalAlignment="Center"
+                                                 Style="{StaticResource TextboxStyle0}"
                                                  Text="{Binding Watermark.ColorB, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource ByteRangeConverter}}" />
                                     </Grid>
 
@@ -509,6 +493,7 @@
                                         <TextBox Grid.Column="3"
                                                  Margin="20,0"
                                                  VerticalAlignment="Center"
+                                                 Style="{StaticResource TextboxStyle0}"
                                                  Text="{Binding Watermark.ColorA, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource ByteRangeConverter}}" />
                                     </Grid>
                                 </Grid>
@@ -549,6 +534,7 @@
                             <ScrollViewer BorderBrush="LightGray"
                                           BorderThickness="1"
                                           HorizontalScrollBarVisibility="Hidden"
+                                          Style="{StaticResource ScrollViewerStyle}"
                                           VerticalScrollBarVisibility="Auto">
                                 <ItemsControl ItemsSource="{Binding HookedProcesses}">
                                     <ItemsControl.ItemTemplate>
